[package]
name = "bahlilui-docs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node", "Window", "HtmlStyleElement", "HtmlHeadElement", "EventTarget", "Event", "MouseEvent"] }