[package]
name = "bahlilui-docs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node", "NodeList", "Window", "HtmlStyleElement", "HtmlHeadElement", "EventTarget", "Event", "MouseEvent"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
notify = "6.1"
futures-util = "0.3"
uuid = "1"
